<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="annaszkup.mathapp.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/calcButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcButtonLabel" />

        <Button
            android:id="@+id/linearFuncButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearFuncButtonLabel" />

        <Button
            android:id="@+id/squareFuncButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squareFuncButtonLabel" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutButtonLabel" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
