<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="annaszkup.mathapp.LinearFunc">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/linearFirstParameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearFirstParameterLabel" />

        <EditText
            android:id="@+id/linearFirstParameterValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <TextView
            android:id="@+id/linearSecondParameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearSecondParameterLabel" />

        <EditText
            android:id="@+id/linearSecondParameterValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <Button
            android:id="@+id/linearFunctionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearFunctionButton" />

        <TextView
            android:id="@+id/linearFunctionResultField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearFunctionResult"
            android:textAlignment="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
